--- a/deno.json
+++ b/deno.json
@@ -51,13 +51,19 @@
   },
   "workspace": ["./concat", "./crm", "./chats"],
   "imports": {
+    "@ai-sdk/openai": "npm:@ai-sdk/openai@^2.0.0-beta.2",
     "@artifact/client": "jsr:@artifact/client@^0.0.138",
+    "@libs/xml": "jsr:@libs/xml@^7.0.0",
     "@std/expect": "jsr:@std/expect@^1.0.16",
+    "commander": "npm:commander@^14.0.0",
+    "debug": "npm:debug@^4.4.1",
+    "fast-deep-equal": "npm:fast-deep-equal@^3.1.3",
     "fast-glob": "npm:fast-glob@^3.3.3",
     "glob-to-regexp": "npm:glob-to-regexp@^0.4.1",
     "gpt-tokenizer": "npm:gpt-tokenizer@^2.9.0",
     "ai": "npm:ai@^5.0.0-beta.2",
     "it-pushable": "npm:it-pushable@^3.2.3",
+    "p-limit": "npm:p-limit@^6.2.0",
     "zod": "npm:zod@3.25.48"
   },
   "nodeModulesDir": "auto"
