--- a/deno.json
+++ b/deno.json
@@ -54,6 +54,9 @@
     "@ai-sdk/openai": "npm:@ai-sdk/openai@^2.0.0-beta.2",
     "@artifact/client": "jsr:@artifact/client@^0.0.139",
     "@libs/xml": "jsr:@libs/xml@^7.0.0",
+    "@std/assert": "jsr:@std/assert@^1.0.13",
+    "@std/async": "jsr:@std/async@^1.0.13",
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
     "@std/expect": "jsr:@std/expect@^1.0.16",
     "@types/node": "npm:@types/node@^24.0.7",
     "commander": "npm:commander@^14.0.0",
