--- a/deno.json
+++ b/deno.json
@@ -55,6 +55,7 @@
     "@artifact/client": "jsr:@artifact/client@^0.0.139",
     "@artifact/server": "jsr:@artifact/server@^0.0.37",
     "@artifact/utils-server": "jsr:@artifact/utils-server@^0.0.27",
+    "@kellnerd/bump": "jsr:@kellnerd/bump@^0.1.1",
     "@libs/xml": "jsr:@libs/xml@^7.0.0",
     "@std/assert": "jsr:@std/assert@^1.0.13",
     "@std/async": "jsr:@std/async@^1.0.13",
