--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,17 +2,17 @@ name: CI
 on:
   push:
     branches:
-      - next
+      - main
   pull_request:
     branches:
-      - next
+      - main
     types:
       - opened
       - synchronize
       - reopened
   workflow_run:
     # without this, the deploy workflow will not run after the auto-merge workflow completes
-    workflows: ['Auto-merge']
+    workflows: ["Auto-merge"]
     types: [completed]
   workflow_dispatch:
 
