--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
       - reopened
   workflow_run:
     # without this, the deploy workflow will not run after the auto-merge workflow completes
-    workflows: ["Auto-merge"]
+    workflows: ['Auto-merge']
     types: [completed]
   workflow_dispatch:
 
