--- a/deno.json
+++ b/deno.json
@@ -52,9 +52,10 @@
   "workspace": ["./concat", "./crm", "./chats"],
   "imports": {
     "@ai-sdk/openai": "npm:@ai-sdk/openai@^2.0.0-beta.2",
-    "@artifact/client": "jsr:@artifact/client@^0.0.139",
+    "@ai-sdk/react": "npm:@ai-sdk/react@2.0.0-beta.3",
+    "@artifact/client": "jsr:@artifact/client@^0.0.141",
     "@artifact/server": "jsr:@artifact/server@^0.0.37",
-    "@artifact/utils-server": "jsr:@artifact/utils-server@^0.0.27",
+    "@artifact/utils-server": "jsr:@artifact/utils-server@^0.0.28",
     "@kellnerd/bump": "jsr:@kellnerd/bump@^0.1.1",
     "@libs/xml": "jsr:@libs/xml@^7.0.0",
     "@std/assert": "jsr:@std/assert@^1.0.13",
@@ -68,9 +69,10 @@
     "fast-glob": "npm:fast-glob@^3.3.3",
     "glob-to-regexp": "npm:glob-to-regexp@^0.4.1",
     "gpt-tokenizer": "npm:gpt-tokenizer@^3.0.1",
-    "ai": "npm:ai@^5.0.0-beta.2",
+    "ai": "npm:ai@^5.0.0-beta.3",
     "it-pushable": "npm:it-pushable@^3.2.3",
-    "p-limit": "npm:p-limit@^6.2.0"
+    "p-limit": "npm:p-limit@^6.2.0",
+    "ulid": "npm:ulid@^3.0.1"
   },
   "nodeModulesDir": "auto"
 }
