--- a/chats/deno.json
+++ b/chats/deno.json
@@ -1,11 +1,12 @@
 {
   "name": "@dreamcatcher/chats",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "tasks": {
     "watch": "deno test -A --watch",
     "bump": "deno run -A jsr:@kellnerd/bump"
   },
   "exports": {
-    ".": "./main.ts"
+    ".": "./main.ts",
+    "./schema": "./schema.ts"
   }
 }
