--- a/deno.json
+++ b/deno.json
@@ -64,6 +64,7 @@
     "@std/async": "jsr:@std/async@^1.0.13",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
     "@std/expect": "jsr:@std/expect@^1.0.16",
+    "@testing-library/react": "npm:@testing-library/react@^16.3.0",
     "@types/node": "npm:@types/node@^24.0.12",
     "commander": "npm:commander@^14.0.0",
     "debug": "npm:debug@^4.4.1",
@@ -71,10 +72,13 @@
     "fast-deep-equal": "npm:fast-deep-equal@^3.1.3",
     "fast-glob": "npm:fast-glob@^3.3.3",
     "glob-to-regexp": "npm:glob-to-regexp@^0.4.1",
+    "global-jsdom": "npm:global-jsdom@^26.0.0",
     "gpt-tokenizer": "npm:gpt-tokenizer@^3.0.1",
     "ai": "npm:ai@^5.0.0-beta.5",
     "it-pushable": "npm:it-pushable@^3.2.3",
     "p-limit": "npm:p-limit@^6.2.0",
+    "react": "npm:react@^19.1.0",
+    "react-dom": "npm:react-dom@^19.1.0",
     "ulid": "npm:ulid@^3.0.1",
     "zod": "npm:zod@^3.25.76"
   },
