--- a/deno.json
+++ b/deno.json
@@ -52,11 +52,11 @@
   },
   "workspace": ["./concat", "./crm", "./chats"],
   "imports": {
-    "@ai-sdk/openai": "npm:@ai-sdk/openai@^2.0.0-beta.3",
-    "@ai-sdk/react": "npm:@ai-sdk/react@2.0.0-beta.5",
-    "@ai-sdk/xai": "npm:@ai-sdk/xai@^2.0.0-beta.4",
-    "@artifact/client": "jsr:@artifact/client@^0.0.160",
-    "@artifact/server": "jsr:@artifact/server@^0.0.55",
+    "@ai-sdk/openai": "npm:@ai-sdk/openai@2.0.0-beta.7",
+    "@ai-sdk/react": "npm:@ai-sdk/react@2.0.0-beta.15",
+    "@ai-sdk/xai": "npm:@ai-sdk/xai@2.0.0-beta.4",
+    "@artifact/client": "jsr:@artifact/client@^0.0.161",
+    "@artifact/server": "jsr:@artifact/server@^0.0.56",
     "@artifact/utils-server": "jsr:@artifact/utils-server@^0.0.38",
     "@kellnerd/bump": "jsr:@kellnerd/bump@^0.1.1",
     "@libs/xml": "jsr:@libs/xml@^7.0.0",
@@ -74,7 +74,7 @@
     "glob-to-regexp": "npm:glob-to-regexp@^0.4.1",
     "global-jsdom": "npm:global-jsdom@^26.0.0",
     "gpt-tokenizer": "npm:gpt-tokenizer@^3.0.1",
-    "ai": "npm:ai@^5.0.0-beta.5",
+    "ai": "npm:ai@5.0.0-beta.15",
     "it-pushable": "npm:it-pushable@^3.2.3",
     "p-limit": "npm:p-limit@^6.2.0",
     "react": "npm:react@^19.1.0",
