--- a/deno.json
+++ b/deno.json
@@ -52,32 +52,31 @@
   },
   "workspace": ["./concat", "./crm", "./chats"],
   "imports": {
-    "@ai-sdk/openai": "npm:@ai-sdk/openai@2.0.0-beta.7",
-    "@ai-sdk/provider-utils": "npm:@ai-sdk/provider-utils@3.0.0-beta.2",
-    "@ai-sdk/react": "npm:@ai-sdk/react@2.0.0-beta.15",
-    "@ai-sdk/xai": "npm:@ai-sdk/xai@2.0.0-beta.4",
-    "@artifact/client": "jsr:@artifact/client@^0.0.161",
-    "@artifact/server": "jsr:@artifact/server@^0.0.56",
-    "@artifact/utils-server": "jsr:@artifact/utils-server@^0.0.38",
-    "@kellnerd/bump": "jsr:@kellnerd/bump@^0.1.1",
-    "@libs/xml": "jsr:@libs/xml@^7.0.0",
-    "@std/assert": "jsr:@std/assert@^1.0.13",
-    "@std/async": "jsr:@std/async@^1.0.13",
-    "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
-    "@std/expect": "jsr:@std/expect@^1.0.16",
-    "@testing-library/react": "npm:@testing-library/react@^16.3.0",
-    "@types/node": "npm:@types/node@^24.0.12",
-    "commander": "npm:commander@^14.0.0",
-    "debug": "npm:debug@^4.4.1",
-    "expect-type": "npm:expect-type@^1.2.2",
-    "fast-deep-equal": "npm:fast-deep-equal@^3.1.3",
-    "fast-glob": "npm:fast-glob@^3.3.3",
-    "glob-to-regexp": "npm:glob-to-regexp@^0.4.1",
-    "global-jsdom": "npm:global-jsdom@^26.0.0",
-    "gpt-tokenizer": "npm:gpt-tokenizer@^3.0.1",
-    "ai": "npm:ai@5.0.0-beta.15",
-    "it-pushable": "npm:it-pushable@^3.2.3",
-    "p-limit": "npm:p-limit@^6.2.0",
+    "@ai-sdk/openai": "npm:@ai-sdk/openai@2.0.0-beta.8",
+    "@ai-sdk/react": "npm:@ai-sdk/react@2.0.0-beta.19",
+    "@ai-sdk/xai": "npm:@ai-sdk/xai@2.0.0-beta.6",
+    "@artifact/client": "jsr:@artifact/client@0.0.161",
+    "@artifact/server": "jsr:@artifact/server@0.0.56",
+    "@artifact/utils-server": "jsr:@artifact/utils-server@0.0.38",
+    "@kellnerd/bump": "jsr:@kellnerd/bump@0.1.1",
+    "@libs/xml": "jsr:@libs/xml@7.0.0",
+    "@std/assert": "jsr:@std/assert@1.0.13",
+    "@std/async": "jsr:@std/async@1.0.13",
+    "@std/dotenv": "jsr:@std/dotenv@0.225.5",
+    "@std/expect": "jsr:@std/expect@1.0.16",
+    "@testing-library/react": "npm:@testing-library/react@16.3.0",
+    "@types/node": "npm:@types/node@24.0.14",
+    "commander": "npm:commander@14.0.0",
+    "debug": "npm:debug@4.4.1",
+    "expect-type": "npm:expect-type@1.2.2",
+    "fast-deep-equal": "npm:fast-deep-equal@3.1.3",
+    "fast-glob": "npm:fast-glob@3.3.3",
+    "glob-to-regexp": "npm:glob-to-regexp@0.4.1",
+    "global-jsdom": "npm:global-jsdom@26.0.0",
+    "gpt-tokenizer": "npm:gpt-tokenizer@3.0.1",
+    "ai": "npm:ai@5.0.0-beta.19",
+    "it-pushable": "npm:it-pushable@3.2.3",
+    "p-limit": "npm:p-limit@6.2.0",
     "react": "npm:react@19.1.0",
     "react-dom": "npm:react-dom@19.1.0",
     "ulid": "npm:ulid@3.0.1",
